<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello, Ken!</string>
    <string name="button_submit_text">Submit</string>
    <string name="edit_message_hint">Please enter a status update of no more than 140 characters</string>
    <string name="main_activity_prompt">Status Update</string>
    <string name="post_status_success">Message posted successfully</string>
    <string name="post_status_fail">Failed to post status message</string>
    <string name="pref_key_user_title">User Name</string>
    <string name="pref_key_password_title">Password</string>
    <string name="action_refresh_title">Refresh</string>
    <string name="activity_timeline_title">Timeline</string>
    <string name="action_timeline_title">Timeline</string>
    <string name="action_compose_title">New Post</string>

</resources>
