<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    
    <item android:id="@+id/action_compose" android:showAsAction="ifRoom|withText" android:title="@string/action_compose_title" android:icon="@android:drawable/ic_menu_edit"></item><item android:id="@+id/action_timeline" android:showAsAction="ifRoom|withText" android:title="@string/action_timeline_title" android:icon="@drawable/ic_menu_allfriends"></item><item android:id="@+id/action_refresh" android:icon="@drawable/ic_menu_refresh" android:title="@string/action_refresh_title" android:showAsAction="ifRoom|withText"></item><item android:id="@+id/action_settings" android:orderInCategory="100" android:showAsAction="ifRoom|withText" android:title="@string/action_settings" android:icon="@android:drawable/ic_menu_preferences" />
    

</menu>
